<resources>
    <string name="app_name">Turismo San Rafael</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="publicidad">En esta aplicación encontrarás información de interés sobre el turismo en el municipio de San Rafael, encontrarás la guía de los principales sitios para visitar, las festividades y el directorio turistico, como información de hoteles y restaurantes para organizar su plan de viaje a nuestro municipio.</string>

    <string name="title_activity_acerca">Acerca de la Aplicación</string>
    <string name="activity_acerca">Esta aplicación es realizada por Katherine Osorio Murillo, para el curso de aplicaciones moviles de la Universidad de Antioquia</string>

    <string name="title_activity_hotel">HotelActivity</string>
    
    <string name="hoteles">Hoteles</string>
    <string name="SanMartinCampestre">San Martin Campestre</string>
    <string name="hotelsanmartin">Horario de atención: Horarios de oficina \r\n Dirección:Vereda Bizcocho \r\nTeléfono:321 639 82 22</string>

    <string name="DonFabio">Hotel Don Fabio</string>
    <string name="hoteldonfabio">Disponemos de dos sedes: una urbana y una semi-urbana, cerca parque con parqueo. \n
Quejas y sugerencias 3206800944</string>

    <string name="ElCastillito">El Castillito</string>
    <string name="hotelelcastillito"> \r\nDirección: Cr 29 30 - 37(4)\r\nTelefono: 8587583</string>
    <string name="title_activity_bar">Bares</string>

    <string name="title_activity_turismo">Turismo</string>
    <string name="title_activity_demografia">Demografia</string>

    <string name="bares">Bares</string>
    <string name="Expats">Expats Bar</string>
    <string name="expatsbar">Musica variada, perfecto para disfrutar de una charla con los amigos</string>

    <string name="Discos">Discotecas</string>
    <string name="discos">La gente que visita San Rafael, en la noche, puede disfrutar de variadas discotecas alrededor del parque</string>

    <string name="Fiestas">Fiestas del Rio</string>
    <string name="fiestas">En Enero se celebran las principales festividades: Las Fiestas del Rio.</string>

    <string name="Turismo">Turismo</string>

    <string name="Camping">Camping \n El Bizcocho</string>
    <string name="elbizcocho">Vía a Medellín a 6 km.  Del casco urbano carretera pavimentada, administrado por la Cooperativa Multiactiva San Rafael.

\n Conocido también como las Malvinas, Vía a Medellín a 6 km. \n Del casco urbano carretera pavimentada, administrado por la Cooperativa Multiactiva San Rafael.
\n Ofrece los servicios de: \n
·        Restaurante \n
·        Bar \n
·        Hospedaje \n
·        Zona de camping \n
·        Actividades acuáticas \n
·        Pesca deportiva en estanques</string>

    <string name="CasaCultura">Casa de la Cultura</string>
    <string name="casacultura">Contiguo al hospital y al parque de la Madre, la casa de la cultura tomó el nombre de Clemente Antonio Giraldo, primer alcalde elegido popularmente y quien inauguró la obra. El espacio atesora conocimiento impreso en los libros de la biblioteca y sirve de promotor, difusor y formador artístico.</string>

    <string name="LaTernera">Parque \n Las Terneras</string>
    <string name="laternera">Km 2.5 Via El Arenal, San Rafael (Antioquia)</string>

    <string name="Demografia">Demografia</string>
    <string name="presentacion">San Rafael Embrujo de Aguas Cristalinas</string>
    <string name="mas">San Rafael es un municipio de Colombia, localizado en la subregión Oriente del departamento de Antioquia. Limita por el norte con los municipios de Alejandría y San Roque, por el este y el sur con el municipio de San Carlos y por el oeste con los municipios de Guatapé y Alejandría.</string>


</resources>
