<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/hoteles"
        android:title="@string/hoteles"
        android:orderInCategory="100"
        tools:ignore="DuplicateIds" />
    <item android:id="@+id/bares"
        android:title="@string/title_activity_bar"
        android:orderInCategory="100"/>
    <item android:id="@+id/demografia"
        android:title="@string/Demografia"
        android:orderInCategory="100"
        tools:ignore="DuplicateIds" />
    <item android:id="@+id/turisticos"
        android:title="@string/Turismo"
        android:orderInCategory="100"
        tools:ignore="DuplicateIds" />
    <item android:id="@+id/aboutUs"
        android:title="@string/title_activity_acerca"
        android:orderInCategory="100"/>
</menu>
