<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"        >
        <TextView
            style="@style/textViewStyleTittle"
            android:text="@string/Turismo"/>
        <TextView
            style="@style/textViewStyleSubtittle"
            android:text="@string/Camping"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/camping"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/textViewStyle"
            android:text="@string/elbizcocho"></TextView>
        <TextView
            style="@style/textViewStyleSubtittle"
            android:text="@string/CasaCultura"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/casacultura"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/textViewStyle"
            android:text="@string/casacultura"></TextView>
        <TextView
            style="@style/textViewStyleSubtittle"
            android:text="@string/LaTernera"/>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/agroecoturstico"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>
        <TextView
            style="@style/textViewStyle"
            android:text="@string/laternera"></TextView>

    </LinearLayout>

</ScrollView>
